--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,7 +17,7 @@ nav.transparent {
 }
 
 nav.sticky {
-  background-color: blue;
+  background-color:rgb(6, 37, 82);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 0.3rem 2rem;
 }
